What happens with a second pattern

--- a/charts/all/config-demo/templates/config-demo-cm.yaml
+++ b/charts/all/config-demo/templates/config-demo-cm.yaml
@@ -10,7 +10,7 @@ data:
       <html lang="en">
         <head>
           <meta charset="utf-8">
-            <title>Config Demo</title>
+            <title>Peggy Config Demo</title>
         </head>
           <body>
             <h1>
